main.css
/* Google Fonts */

.alan-sans-light {
  font-family: "Alan Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: 300;
  font-style: normal;
}

.alan-sans-regular {
  font-family: "Alan Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

.alan-sans-title {
  font-family: "Alan Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: 600;
  font-style: normal;
}

.alan-sans-bold {
  font-family: "Alan Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: 500;
  font-style: normal;
}

/* Theming */

/* 
:root {
  --bg: white;
  --text: black;
}
*/
:root {
  --bg: #121212;
  --text: #f0f0f0;
}

/* Globals */

html body {
  background: var(--bg);
  color: var(--text);
  transition:
    background-color 0.3s,
    color 0.3s;
}

/* Dark/Light Toggle */
.checkbox-image img.dark {
  display: none;
}

.checkbox-image input:checked ~ img.light {
  display: none;
}

.checkbox-image input:checked ~ img.dark {
  display: inline;
}

/* List */

